--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.root {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 200px;
 }
-
-.App-link {
-  color: #61dafb;
+.spacer {
+  flex: 3;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App {
+  flex: 18;
+  background-color: rgba(128, 128, 128, 0.106);
+  padding: 10px;
+}
+.container {
+  display: flex;
+  margin-top: 40px;
+}
+.left-side {
+  flex: 20;
+}
+.right-side {
+  flex: 5;
+  margin-left: 10px;
+  border: 5px solid #2f254d;
+}
+.score {
 }
